airflow/logs/dag_id=etl_dag_v18/run_id=scheduled__2024-09-09T000000+0000/task_id=create_orders_table/attempt=1.log
[2024-09-12T09:06:19.775+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2024-09-12T09:06:19.797+0000] {taskinstance.py:2612} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_dag_v18.create_orders_table scheduled__2024-09-09T00:00:00+00:00 [queued]>
[2024-09-12T09:06:19.812+0000] {taskinstance.py:2612} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_dag_v18.create_orders_table scheduled__2024-09-09T00:00:00+00:00 [queued]>
[2024-09-12T09:06:19.813+0000] {taskinstance.py:2865} INFO - Starting attempt 1 of 6
[2024-09-12T09:06:19.853+0000] {taskinstance.py:2888} INFO - Executing <Task(PostgresOperator): create_orders_table> on 2024-09-09 00:00:00+00:00
[2024-09-12T09:06:19.862+0000] {standard_task_runner.py:104} INFO - Running: ['airflow', 'tasks', 'run', 'etl_dag_v18', 'create_orders_table', 'scheduled__2024-09-09T00:00:00+00:00', '--job-id', '379', '--raw', '--subdir', 'DAGS_FOLDER/etl_dag.py', '--cfg-path', '/tmp/tmpzzi_r8wr']
[2024-09-12T09:06:19.864+0000] {standard_task_runner.py:105} INFO - Job 379: Subtask create_orders_table
[2024-09-12T09:06:19.867+0000] {logging_mixin.py:190} WARNING - /home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py:70 DeprecationWarning: This process (pid=1276) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-09-12T09:06:19.868+0000] {standard_task_runner.py:72} INFO - Started process 1281 to run task
[2024-09-12T09:06:19.940+0000] {task_command.py:467} INFO - Running <TaskInstance: etl_dag_v18.create_orders_table scheduled__2024-09-09T00:00:00+00:00 [running]> on host 72ac4976c45d
[2024-09-12T09:06:20.055+0000] {taskinstance.py:3131} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='etl_dag_v18' AIRFLOW_CTX_TASK_ID='create_orders_table' AIRFLOW_CTX_EXECUTION_DATE='2024-09-09T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-09-09T00:00:00+00:00'
[2024-09-12T09:06:20.056+0000] {taskinstance.py:731} INFO - ::endgroup::
[2024-09-12T09:06:20.069+0000] {sql.py:266} INFO - Executing: 
            CREATE TABLE IF NOT EXISTS orders (
                order_id SERIAL PRIMARY KEY UNIQUE,
                customer_id INT,
                product_id INT,
                order date DATE,
                quantity INT
            );
        
[2024-09-12T09:06:20.085+0000] {base.py:84} INFO - Retrieving connection 'postgres_localhost'
[2024-09-12T09:06:20.197+0000] {base.py:84} INFO - Retrieving connection 'postgres_localhost'
[2024-09-12T09:06:20.240+0000] {sql.py:509} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS orders (
                order_id SERIAL PRIMARY KEY UNIQUE,
                customer_id INT,
                product_id INT,
                order date DATE,
                quantity INT
            );
        , parameters: None
[2024-09-12T09:06:20.246+0000] {taskinstance.py:3310} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 272, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 456, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 514, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "order"
LINE 6:                 order date DATE,
                        ^

[2024-09-12T09:06:20.261+0000] {taskinstance.py:1225} INFO - Marking task as UP_FOR_RETRY. dag_id=etl_dag_v18, task_id=create_orders_table, run_id=scheduled__2024-09-09T00:00:00+00:00, execution_date=20240909T000000, start_date=20240912T090619, end_date=20240912T090620
[2024-09-12T09:06:20.297+0000] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2024-09-12T09:06:20.298+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 379 for task create_orders_table (syntax error at or near "order"
LINE 6:                 order date DATE,
                        ^
; 1281)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/cli.py", line 115, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3004, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3158, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3182, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 272, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 456, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 514, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "order"
LINE 6:                 order date DATE,
                        ^

[2024-09-12T09:06:20.324+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2024-09-12T09:06:20.372+0000] {logging_mixin.py:190} WARNING - /home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py:1378 AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `airflow.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
[2024-09-12T09:06:20.420+0000] {taskinstance.py:3900} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-09-12T09:06:20.423+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
